Push bad faith.

--- a/src/components/lyrics/lyrics.sass
+++ b/src/components/lyrics/lyrics.sass
@@ -4,11 +4,26 @@
   max-width: 400px;
   margin-top: 4rem;
 
-  p 
-    margin-bottom: 0.4rem;
-    font-size: 1.45rem;
+  .lyric-content
 
-    span 
-      cursor: pointer;
-      font-style: italic;
-      color: $alt-color;
+    p 
+      margin-bottom: 0.4rem;
+      font-size: 1.45rem;
+
+      span 
+        cursor: pointer;
+        font-style: italic;
+        color: $alt-color;
+
+  .annotation
+    background: $text-color;
+    color: $main-color;
+    padding: 1rem;
+    padding-bottom: 0.2rem;
+    position: absolute;
+    width: 500px;
+    max-width: 70%;
+    right: 10%;
+    
+    p 
+      font-style: 1rem !important;
