--- a/src/components/layout/layout.sass
+++ b/src/components/layout/layout.sass
@@ -12,3 +12,10 @@ a
   max-width: 650px;
   margin: 0 auto;
   padding: 1.5rem;
+
+.tracklist
+  margin-left: 1.45rem;
+  margin-right: 1.45rem;
+
+  h2 
+    font-size: 1.25rem;
