Push two new songs.

--- a/src/components/lyrics/lyrics.sass
+++ b/src/components/lyrics/lyrics.sass
@@ -15,6 +15,12 @@
         font-style: italic;
         color: $alt-color;
 
+    span 
+      a
+        cursor: pointer;
+        font-style: italic;
+        color: $alt-color;
+
   .annotation
     background: $text-color;
     color: $main-color;
@@ -27,3 +33,6 @@
     
     p 
       font-style: 1rem !important;
+
+    a 
+      color: $main-color;
